public/css/app.css
/* ... */
.text-reset {
  color: inherit !important;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    box-shadow: none !important;
  }

  a:not(.btn) {
    text-decoration: underline;
  }

  abbr[title]::after {
    content: " (" attr(title) ")";
  }

  pre {
    white-space: pre-wrap !important;
  }

  pre,
  blockquote {
    border: 1px solid #adb5bd;
    page-break-inside: avoid;
  }

  thead {
    display: table-header-group;
  }

  tr,
  img {
    page-break-inside: avoid;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3 {
    page-break-after: avoid;
  }

@page {
    size: a3;
}

  body {
    min-width: 992px !important;
  }

  .container {
    min-width: 992px !important;
  }

  .navbar {
    display: none;
  }

  .badge {
    border: 1px solid #000;
  }

  .table {
    border-collapse: collapse !important;
  }

  .table td,
  .table th {
    background-color: #fff !important;
  }

  .table-bordered th,
  .table-bordered td {
    border: 1px solid #dee2e6 !important;
  }

  .table-dark {
    color: inherit;
  }

  .table-dark th,
  .table-dark td,
  .table-dark thead th,
  .table-dark tbody + tbody {
    border-color: #dee2e6;
  }

  .table .thead-dark th {
    color: inherit;
    border-color: #dee2e6;
  }
}

.video-game-font {
  font-family: "VT323", Arial, Helvetica, sans-serif;
}

.text-small {
  font-size: 14px !important;
}

.white {
  color: #fafafa !important;
}

.sky-blue {
  color: #7fb7be !important;
}

.light-cyan {
  color: #d3f3ee !important;
}

.yellow {
  color: #ffe818 !important;
}

.red {
  color: #eb5757 !important;
}

.blue {
  color: #2273e0 !important;
}

.purple {
  color: #9b51e0 !important;
}

.black {
  color: #191308 !important;
}

.orange {
  color: #f2994a !important;
}

.white-background {
  background-color: #fafafa !important;
}

.sky-blue-background {
  background-color: #7fb7be !important;
}

.light-cyan-background {
  background-color: #d3f3ee !important;
}

.yellow-background {
  background-color: #ffe818 !important;
}

.red-background {
  background-color: #eb5757 !important;
}

.blue-background {
  background-color: #2273e0 !important;
}

.purple-background {
  background-color: #9b51e0 !important;
}

.black-background {
  background-color: #191308 !important;
}

.orange-background {
  background-color: #f2994a !important;
}

.bg-grad-red-orange {
  background: linear-gradient(to top right, #eb5757, #f2994a) !important;
}

.code-background {
  background-image: url("/img/code-background.png");
  background-size: cover;
  background-repeat: no-repeat;
}

.flex {
  display: flex !important;
}

.align-items-center {
  align-items: center !important;
}

.justify-content-center {
  justify-content: center !important;
}

.justify-content-end {
  justify-content: flex-end !important;
}

.full-width {
  width: 100% !important;
}

.half-width {
  width: 50% !important;
}

.full-height {
  height: 100% !important;
}

.full-page-height {
  height: 150vh !important;
}

@media (min-width: 768px) {
  .full-page-height {
    height: 100vh !important;
  }
}

.half-page-height {
  height: 62.5vh !important;
}

@media (min-width: 768px) {
  .half-page-height {
    height: 50vh !important;
  }
}

.breakout {
  width: 110vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -55vw;
  margin-right: -50vw;
}

.mt-6 {
  margin-top: 4rem !important;
}

.mb-6 {
  margin-bottom: 4rem !important;
}

.mx-6 {
  margin-left: 4rem !important;
  margin-right: 4rem !important;
}

.my-6 {
  margin-top: 4rem !important;
  margin-bottom: 4rem !important;
}

.px-6 {
  padding-left: 4rem !important;
  padding-right: 4rem !important;
}

.login-form {
  box-shadow: 2px 7px 20px 4px #333;
  border-radius: 5px;
  flex-direction: column;
}

@media (min-width: 768px) {
  .login-form {
    flex-direction: row;
  }
}

.login-form .login-form-card {
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
  border-radius: 5px;
  margin-bottom: 2rem;
}

@media (min-width: 768px) {
  .login-form .login-form-card {
    margin-bottom: 0;
  }
}

.login-form .shapes-container {
  justify-content: center;
  margin-left: 1.5rem;
  margin-bottom: 2rem;
}

@media (min-width: 768px) {
  .login-form .shapes-container {
    justify-content: flex-end;
    margin-left: 0;
    margin-bottom: 4rem;
  }
}

.text-input {
  border: none;
  border-radius: 1px;
  background-color: #c4c4c4;
  width: 100%;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
}

.big-green-circle {
  width: 159px;
  height: 157px;
  border-radius: 50%;
  background-color: #27ae60;
  position: relative;
  top: 35px;
}

.yellow-rectangle {
  width: 19.03px;
  height: 199.97px;
  background-color: #ffe818;
  transform: rotate(-47.45deg);
  position: relative;
  top: -49px;
  left: -26px;
}

.small-light-green-circle {
  width: 83px;
  height: 81px;
  border-radius: 50%;
  background-color: #6fcf97;
  position: relative;
  top: -25px;
  left: -41px;
}

body {
  font-family: "Ramabhadra";
  font-size: 16px;
  background-color: #4f4f4f;
  color: #fafafa;
  box-shadow: inset 0px 4px 25px 25px rgba(0, 0, 0, 0.2);
  line-height: 1.6;
}

@media (min-width: 768px) {
  body {
    box-shadow: inset 0px 4px 100px 100px rgba(0, 0, 0, 0.2);
  }
}

h1 {
  font-size: 40px;
}

@media (min-width: 768px) {
  h1 {
    font-size: 48px;
  }
}

h2 {
  margin: 0;
  font-size: 28px;
}

@media (min-width: 768px) {
  h2 {
    font-size: 32px;
  }
}

.content {
  padding: 0;
}

@media (min-width: 768px) {
  .content {
    padding: 2rem;
  }
}

.navbar__wrapper {
  width: 100%;
  position: fixed;
  top: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  max-height: 6.5vh;
  z-index: 2;
}
/* ... */

